# JobSpy

./: COMPANY_BOARD_ISRAEL_INVESTIGATION.md  COMPANY_BOARD_ISRAEL_TARGETS.csv  README.md  SCHEDULER_SCRAPE_REPORT.md  amdocs_jobs.json  apple_cli_smoke.json  apple_jobs.json  glassdoor_jobs.json  google_careers_cli_smoke.json  google_careers_jobs.json  greenhouse_jobs.json  linkedin_jobs.json  marvell_jobs.json  microsoft_cli_smoke.json  microsoft_jobs.json  pyproject.toml  redhat_jobs.json  tmp_BDqwEdCl.js  tmp_BnMye4YK.js  tmp_CQHjDD78.js  tmp_CtQciDL0.js  tmp_DQItoUiG.js  tmp_asset.js  tmp_education.html  tmp_experience.html  tmp_experience_utf8.html  tmp_importmap.js  tmp_languages.html  tmp_linkedin_india_persist_run.txt  tmp_linkedin_india_run.txt  tmp_linkedin_india_sharded_run.txt  tmp_profile.html  tmp_skills.html  varonis_jobs.json
.github/workflows/: ci.yml
jobspy/: __init__.py  __main__.py  chromium_cookies.py  companies_table.py  company_career_probe.py  event_publisher.py  jobs_table.py  model.py  util.py
jobspy/apple/: __init__.py
jobspy/bdjobs/: __init__.py
jobspy/comeet/: __init__.py
tests/: test_apple.py  test_chromium_cookies.py  test_companies_table.py  test_company_career_probe.py  test_eightfold.py  test_glassdoor.py  test_google_careers.py  test_greenhouse.py  test_jobs_table.py  test_jobspy_init.py  test_json_feed.py  test_linkedin.py  test_linkedin_profile.py  test_main.py  test_meta.py  test_microsoft.py  test_redhat.py  test_workday.py
tmpchrome-test/: 5d446dc0-7792-414b-92ef-a216fc2332af.tmp  CrashpadMetrics-active.pma
(+20 files in other folders)
